<resources>
    <string name="app_name">Court Counter</string>
    <string name="teamA">Team A</string>
    <string name="team_a_score">0</string>
    <string name="team_b_score">0</string>
    <string name="three_points">+3 Points</string>
    <string name="two_points">+2 Points</string>
    <string name="free_throw">Free Throw</string>
    <string name="teamB">Team B</string>
    <string name="reset">RESET</string>
</resources>
